<resources>
    <string name="app_name">Test YT Playlist</string>
    <string name="login_button">Login</string>
    <string name="watch_in_app_button">Open in App</string>
    <string name="list_playlist">Generate</string>
    <string name="test_button">DEBUG</string>
    <string name="subreddit_name">YoutubeHaiku</string>
    <string name="subreddit_suggestion">Choose a subreddit</string>
    <string name="prev_thumbnail">The previous video thumbnail</string>
    <string name="current_thumbnail">The current video thumbnail</string>
    <string name="next_thumbnail">The next video thumbnail</string>
    <string name="videos_to_load">Enter the number of videos to load</string>
    <string name="back_to_main">Go back to main app</string>
    <string name="settings_hint">Button to open settings menu</string>
    <string name="exit_settings_hint">exit settings</string>
    <string-array name="number_of_videos">
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>125</item>
        <item>150</item>
        <item>200</item>
    </string-array>
</resources>